[package]
name = "timestamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "timestamp-micro"
path = "src/main.rs"

[dependencies]
axum = "0.7.4"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.31"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tower = { version = "0.4", features = ["util"] }
tower-http = "0.5.1"
